Senior_Project/src/senior/project/test/server/errors/ServerBadDateRangeException.java
package senior.project.test.server.errors;

/**
 *
 * @author Paul Jones
 */
public class ServerBadDateRangeException extends Exception {

  public ServerBadDateRangeException(String msg) {
    super(msg);
  }
}
